# ehrbl

./: .gitignore  .pkgx.yaml  README.md  ehrbl.kibot.yaml  ehrbl.kicad_pcb  ehrbl.kicad_pro  ehrbl.kicad_sch  fp-lib-table  sym-lib-table
.github/workflows/: case.py  case.yml  holes.py  keymap.sh  keymap.yml  kibot.yml  zmk.sh  zmk.yml
.images/: info.json  keymap.yml
config/: build.yml
config/boards/shields/ehrbl/: 26.h  Kconfig.defconfig  Kconfig.shield  combos.dtsi  ehrbl-layouts.dtsi  ehrbl.conf  ehrbl.dtsi  ehrbl.keymap  ehrbl.overlay  ehrbl.zmk.yml  ehrbl_dongle.conf  ehrbl_dongle.overlay  ehrbl_left.conf  ehrbl_left_central.conf  ehrbl_left_peripheral.conf  ehrbl_left_peripheral.overlay  ehrbl_right.conf  ehrbl_right.overlay  magic.dtsi  taps.dtsi
rmk/: .gitignore  Cargo.toml  Makefile.toml  README.md  keyboard.toml  vial.json
rmk/.cargo/: config.toml
