[package]
resolver = "2"
name = "ehrbl"
version = "0.0.1"
description = "Keyboard firmware written in Rust"
homepage = ""
repository = ""
readme = ""
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# rmk = { version = "0.5.2", features = [
rmk = { git = "https://github.com/HaoboGu/rmk",  branch= "main", features = [
# rmk = { git = "https://github.com/HaoboGu/rmk", branch = "feat/hrm", features = [
# rmk = { git = "https://github.com/HaoboGu/rmk", rev = "refs/pull/200/head", features = [
    "nrf52840_ble",
    "async_matrix",
    "split",
    ] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.4", features = ["tick-hz-32_768", "defmt"] }
embassy-nrf = { version = "0.3.1", features = [
    "nrf52840",
    "defmt",
    "time-driver-rtc1",
    "unstable-pac",
    "gpiote",
    "time",
    "nfc-pins-as-gpio",
] }
embassy-executor = { version = "0.7", features = [
    "defmt",
    "task-arena-size-32768", # TODO: Change it to 16384 or less if you're using nRF52832/11/10
    "arch-cortex-m",
    "executor-thread",
] }
embassy-futures = { version = "0.1", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"


[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
